--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "displayName": "AStar Agents",
   "description": "Extension to enhance workflow when working with LangGraphs",
   "publisher": "astar-technologies",
-  "version": "0.0.2",
+  "version": "0.0.3",
+  "icon": "static/icon.png",
   "engines": {
     "vscode": "^1.92.0"
   },
