--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "AStar Agents",
   "description": "Extension to enhance workflow when working with LangGraphs",
   "publisher": "astar-technologies",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "icon": "static/icon.png",
   "engines": {
     "vscode": "^1.92.0"
@@ -17,7 +17,7 @@
     "commands": [
       {
         "command": "createLanggraphStructure",
-        "title": "Create Langgraph Structure"
+        "title": "Create New Graph"
       }
     ]
   },
